@@ -86,7 +86,7 @@ switch($_REQUEST['action']) {
 	break; 
 	case 'update_user': 
 		// Make sure we're a user and they came from the form
-		if (!Access::check('interface','25')) { 
+		if (!Access::check('interface','25') OR !Config::get('use_auth')) { 
 			access_denied(); 
 			exit; 
 		} 
